# discolinks

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  release.yml
integration_tests/: conftest.py  server.py  test_404.py  test_connection_error.py  test_double_redirect.py  test_exclude.py  test_fragments.py  test_link_404.py  test_link_404_with_another_link.py  test_link_error.py  test_link_redirect.py  test_no_scheme.py  test_other_server.py  test_recursive.py  test_recursive_redirect.py  test_redirect.py  test_url_404.py  test_url_head_405.py  test_version.py  util.py
src/discolinks/: __version__.py  analyzer.py  cli.py  core.py  excluder.py  export.py  html.py  link_extractor.py  link_store.py  monitor.py  outcome.py  requester.py  text.py  url_store.py  worker.py
tests/: test_excluder.py  test_html.py
