[tool.poetry]
name = "discolinks"
version = "0.2.0"
description = "Command-line tool which checks a website for broken links."
authors = ["Bertrand Bonnefoy-Claudet <bertrand@bertrandbc.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
keywords = ["crawler", "http", "html", "link", "url", "web"]

[tool.poetry.dependencies]
attrs = "^23.1.0"
beautifulsoup4 = "^4.11.1"
click = "^8.1.3"
httpx = "^0.27.0"
python = "^3.9"
rich = "^13.3.1"

[tool.poetry.group.dev.dependencies]
flask = "^3.0.3"
mypy = "^1.0.0"
pytest = "^7.1.2"
ruff = "^0.5.1"
types-beautifulsoup4 = "^4.11.1"

[tool.poetry.scripts]
discolinks = "discolinks.cli:main"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["ASYNC", "B", "C4", "E", "F", "N", "Q", "RUF", "W"]

[tool.ruff.lint.isort]
known-first-party = ["discolinks"]

[tool.mypy]
check_untyped_defs = true
no_implicit_reexport = true
python_version = "3.9"
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
