[project]
name = "discolinks"
version = "0.3.0"
description = "Command-line tool which checks a website for broken links."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Bertrand Bonnefoy-Claudet", email = "bertrand@bertrandbc.com" },
]
classifiers = [
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
keywords = ["crawler", "http", "html", "link", "url", "web"]
dependencies = [
  "attrs>=24.2.0",
  "beautifulsoup4>=4.11.1",
  "click>=8.1.3",
  "httpx>=0.27.0",
  "rich>=13.3.1",
]

[project.scripts]
discolinks = "discolinks.cli:main"

[dependency-groups]
dev = [
  "flask>=3.0.3",
  "mypy>=1.0.0",
  "pytest>=8.2.2",
  "ruff>=0.6.3",
  "types-beautifulsoup4>=4.11.1",
]

[build-system]
requires = ["hatchling>=1.16"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["ASYNC", "B", "C4", "E", "F", "N", "Q", "RUF", "W"]

[tool.ruff.lint.isort]
known-first-party = ["discolinks"]

[tool.mypy]
check_untyped_defs = true
no_implicit_reexport = true
python_version = "3.9"
warn_unused_ignores = true
